--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<h1>Привіт Привіт!</h1>
+	<h1>Привіт Привіт Hello!</h1>
 	<script src="js/home.js"></script>
 	<script src="js/user-communication.js"></script>
 	<script src="js/operator.js"></script>
