--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<script src="js/home.js"></script>
 	<script src="js/user-communication.js"></script>
 	<script src="js/operator.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 </html>
